# universal-download-manager

./: .gitignore  README.md
.github/workflows/: ci.yml
daemon/: Cargo.toml
daemon/crates/daemon/: Cargo.toml
daemon/crates/daemon/src/: bridge.rs  categorize.rs  main.rs  protocol.rs  state.rs
daemon/crates/daemon/src/config/: settings.rs
daemon/crates/daemon/src/queue/: scheduler.rs  throttle.rs
daemon/crates/daemon/src/security/: auth.rs  mod.rs  validate.rs
daemon/crates/daemon/src/server/: mod.rs  websocket.rs
daemon/crates/engine/: Cargo.toml
daemon/crates/engine/src/: assembler.rs  chunker.rs  downloader.rs  event.rs  file_manager.rs  lib.rs  progress.rs  segment.rs  throttle.rs
daemon/crates/storage/: Cargo.toml
daemon/crates/storage/src/: db.rs  lib.rs  models.rs  schema.sql
docs/: ARCHITECTURE.md  BUILD_PHASES.md  INSTALL_GUIDE.md  RELEASE_CHECKLIST.md
extension/: README.md
extension/chrome/: manifest.json
extension/chrome/background/: service-worker.js
extension/chrome/icons/: README.md
extension/chrome/popup/: popup.html
extension/edge/: README.md
extension/firefox/: background.html  manifest.json
extension/firefox/background/: background.js
extension/firefox/lib/: udm-core.js
extension/firefox/popup/: popup.css  popup.js
extension/scripts/: e2e.mjs  sync-lib.mjs
extension/shared/: protocol.js
extension/test/: core.test.mjs
ui/: README.md  package-lock.json  package.json
ui/scripts/: prepare-sidecar.mjs
ui/src/: App.css  App.tsx  main.tsx  newDownloadWindow.ts  types.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json  udm-updater.key  udm-updater.key.pub
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src/components/: AddURLModal.tsx  DownloadItem.tsx  DownloadList.tsx  NewDownload.css  NewDownload.tsx  Onboarding.tsx  Settings.tsx  SpeedGraph.tsx  Toasts.tsx  Toolbar.tsx
ui/src/hooks/: useClipboardWatcher.ts  useDaemonSocket.ts
ui_gen/: package.json
ui_gen/src-tauri/: Cargo.toml  tauri.conf.json
(+3 files in other folders)
