[package]
name = "udm-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "udm-daemon"
path = "src/main.rs"

[dependencies]
udm-storage = { path = "../storage" }
udm-engine = { path = "../engine" }
rusqlite.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
url.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
